hw_galen_demo_1_footer_logo

--- a/galen-demo-main/galen.config
+++ b/galen-demo-main/galen.config
@@ -1,7 +1,7 @@
 
 # Range approximation
 # ~~~~~~~~~~~~~~~~~~~~~
-# Defines the approximation value for ranges when using "~" in galen page specs
+# Defines the approximation value for ranges when using "~" in galen restaurant_page specs
 # This value means how many pixels or percents should it take constructing a range
 # e.g. if we define approximation as 5 then the following spec:
 #   height: ~ 50 px
@@ -18,9 +18,9 @@ galen.range.approximation=3
 # galen.reporting.listeners=
 
 
-# Using page urls from last checked page in HTML report
+# Using restaurant_page urls from last checked restaurant_page in HTML report
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-# This property enables the use of last page url in a page test
+# This property enables the use of last restaurant_page url in a restaurant_page test
 # Needed when for some pages on the website there is no way to open it by direct url 
 # galen.reporting.html.useLastPageUrls = true
 
@@ -42,13 +42,13 @@ spec.colorscheme.precision = 256
 
 # Full screenshots
 # ~~~~~~~~~~~~~~~~~~~~
-# In some browsers it is not possible to create a complete screenshot of whole page.
-# With this property enabled Galen will scroll page and make screenshots of parts of it. 
+# In some browsers it is not possible to create a complete screenshot of whole restaurant_page.
+# With this property enabled Galen will scroll restaurant_page and make screenshots of parts of it.
 # Then it will assemble it in a one big screenshot
 #
 galen.browser.screenshots.fullPage = false
 # the following parameter is need in case the upper parameter is set to true
-# it sets the amount of time in milliseconds needed for a check that the page was scrolled when taking full page screenshots
+# it sets the amount of time in milliseconds needed for a check that the restaurant_page was scrolled when taking full restaurant_page screenshots
 galen.browser.screenshots.fullPage.scrollWait = 0
 
 
@@ -91,15 +91,15 @@ galen.test.js.file.suffix=.test.js
 
 
 
-# Area finder for page elements
+# Area finder for restaurant_page elements
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # Defines a method of extracting location and size of web element. By default 'native' is used, which means
-# that Galen will use WebElement.getLocation() and WebElement.getSize() Java methods to construct area of page element.
+# that Galen will use WebElement.getLocation() and WebElement.getSize() Java methods to construct area of restaurant_page element.
 # But on some devices (e.g. iPhone with iOS 8.0) this would not work and there you need to switch to another method.
 # All possible methods
 # - native - Uses WebDriver methods for getting location and size
-# - jsbased - Uses JavaScript getBoundingClientRect() function in order to get area for page element.
+# - jsbased - Uses JavaScript getBoundingClientRect() function in order to get area for restaurant_page element.
 # - jsbased_native - Uses 'jsbased' method but in case of error goes back to 'native' method
-# - custom - Uses user-defined JavaScript for getting area of page element. If you use this method, you need to also
+# - custom - Uses user-defined JavaScript for getting area of restaurant_page element. If you use this method, you need to also
 #            provide a script via galen.browser.pageElement.areaFinder.custom.script property
 galen.browser.pageElement.areaFinder = native
