--- a/herokuapp-cloned-actualized/pom.xml
+++ b/herokuapp-cloned-actualized/pom.xml
@@ -30,6 +30,11 @@
     <artifactId>selenide</artifactId>
     <version>5.18.0</version>
   </dependency>
+  <dependency>
+    <groupId>com.github.javafaker</groupId>
+    <artifactId>javafaker</artifactId>
+    <version>0.12</version>
+  </dependency>
 </dependencies>
 <build>
   <plugins>
